fix(upload): alignement sur ios

--- a/src/component/upload/style/_module.scss
+++ b/src/component/upload/style/_module.scss
@@ -19,4 +19,6 @@
 #{ns(upload)} {
   @include text-style(sm);
   @include width(100%);
+  display: inline-flex;
+  @include margin(0);
 }
